feat: add visual calendar view for room availability management

--- a/src/main/webapp/receptionist_dashboard.html
+++ b/src/main/webapp/receptionist_dashboard.html
@@ -41,7 +41,7 @@
 
   <div class="action-cards">
     <a href="search_app.html" class="card card-booking">🔍 New Booking</a>
-    <div onclick="toggleProfile()" class="card card-profile">👤 My Profile / Password</div>
+    <a href="calendar.html" class="card" style="background: #e67e22;">📅 Room Calendar</a> <div onclick="toggleProfile()" class="card card-profile">👤 My Profile</div>
     <a href="help.html" class="card card-help">❓ Help Guide</a>
   </div>
 
